Updating Canonical URL's

--- a/what-is-brazilian-jiu-jitsu-bjj.html
+++ b/what-is-brazilian-jiu-jitsu-bjj.html
@@ -200,45 +200,49 @@
     </header>
 
     <main>
-      <h1>What is Brazilian Jiu-Jitsu (BJJ)?</h1>
+      <section>
+        <h2>What is Brazilian Jiu-Jitsu (BJJ)?</h2>
+        <p>Brazilian Jiu-Jitsu (BJJ) is a martial art and combat sport that focuses on grappling and ground fighting, emphasizing the use of technique and leverage over brute strength. Originating from Japan, Jiu-Jitsu was refined and transformed into its modern form by the Gracie family in Brazil, particularly by Helio Gracie. Helio adapted traditional Jiu-Jitsu techniques to accommodate his smaller stature, creating a system where a smaller, weaker person could effectively defend themselves against a larger, stronger opponent.</p>
 
-      <article>
-        <section>
-          <h2>Introduction to Brazilian Jiu Jitsu</h2>
-          <p>Brazilian Jiu Jitsu (BJJ) is a martial art that focuses on ground fighting and grappling techniques. Developed from traditional Japanese Jiu Jitsu, BJJ emphasizes leverage and technique to overcome larger opponents.</p>
-        </section>
+        <img src="./images/helio-gracie.png" alt="BJJ Grandmaster Helio Gracie" />
+      </section>
 
-        <section>
-          <h2>Core Principles of BJJ</h2>
-          <p>Key principles of Brazilian Jiu Jitsu include:</p>
-          <ul>
-            <li><strong>Leverage:</strong> Using leverage to control and submit opponents.</li>
-            <li><strong>Technique:</strong> Emphasizing proper technique over strength.</li>
-            <li><strong>Positional Control:</strong> Achieving dominant positions like mount, guard, and side control.</li>
-          </ul>
-        </section>
+      <section>
+        <h2>What is BJJ Known For?</h2>
+        <p>BJJ is renowned for its emphasis on ground fighting and submissions. Unlike many martial arts that focus on striking, BJJ teaches practitioners to control their opponents through holds, chokes, and joint locks. This focus on ground techniques is what sets BJJ apart and makes it incredibly effective in real-life self-defense situations and mixed martial arts (MMA) competitions. BJJ gained global recognition through the success of the Gracie family in the Ultimate Fighting Championship (UFC), where they demonstrated that a skilled BJJ practitioner could defeat much larger and stronger opponents using superior technique and strategy.</p>
+        <img src="./images/what-is-bjj-known-for.png" alt="Demtrious Johnson finishing an Armbar in the UFC" />
+      </section>
 
-        <section>
-          <h2>Key Techniques in BJJ</h2>
-          <p>BJJ techniques focus on submissions (joint locks and chokeholds), escapes, and positional transitions. Practitioners learn to apply these techniques both with and without the traditional gi (uniform).</p>
-        </section>
+      <section>
+        <h2>How Many Years Does It Take to Learn BJJ? Understanding the Belt System</h2>
+        <p>Learning BJJ is a lifelong journey, and the time it takes to progress through the ranks can vary greatly depending on the individual. The belt system in BJJ starts with white belt and progresses through blue, purple, brown, and finally, black belt. On average, it takes around 10 years of consistent training to achieve a black belt, although this can vary. Each belt represents a significant milestone in a practitioner’s development, reflecting their growing mastery of techniques, understanding of the art, and personal growth.</p>
+      </section>
 
-        <section>
-          <h2>Benefits of Practicing BJJ</h2>
-          <p>Practicing Brazilian Jiu Jitsu offers various benefits:</p>
-          <ul>
-            <li>Improves physical fitness, including strength, flexibility, and cardiovascular endurance.</li>
-            <li>Enhances mental toughness, focus, and problem-solving skills.</li>
-            <li>Promotes camaraderie and a sense of community among practitioners.</li>
-          </ul>
-        </section>
+      <section>
+        <h2>Gi vs. No-Gi: Understanding the Differences</h2>
+        <p>BJJ can be practiced in two different ways: with a gi (a traditional martial arts uniform) or without a gi (no-gi).</p>
+        <ul>
+          <li><strong>Gi BJJ:</strong> Involves wearing a gi, which allows for the use of grips on the clothing to control and submit opponents. The gi introduces a variety of techniques that rely on gripping the fabric, adding another layer of strategy to the game.</li>
+          <li><strong>No-Gi BJJ:</strong> Practiced in athletic wear such as rash guards and shorts. Without the gi, practitioners rely more on body control and speed, as there are no grips on clothing. This style is often faster-paced and more similar to the grappling seen in MMA.</li>
+        </ul>
+        <p>Both gi and no-gi BJJ offer unique challenges and benefits, and many practitioners choose to train in both to develop a well-rounded skill set.</p>
+      </section>
 
-        <section>
-          <h2>Conclusion</h2>
-          <p>Whether you're interested in self-defense, physical fitness, or personal growth, Brazilian Jiu Jitsu provides a comprehensive martial arts experience. Its principles of leverage and technique make it suitable for people of all ages and fitness levels.</p>
-          <p>Start your journey in Brazilian Jiu Jitsu today and experience the transformative benefits of this dynamic martial art.</p>
-        </section>
-      </article>
+      <section>
+        <h2>The Benefits of Practicing BJJ</h2>
+        <p>Beyond its effectiveness in self-defense and competitive fighting, BJJ offers numerous benefits:</p>
+        <ul>
+          <li><strong>Fitness:</strong> BJJ is a full-body workout that improves strength, flexibility, endurance, and cardiovascular health.</li>
+          <li><strong>Mental Toughness:</strong> Training BJJ builds resilience, problem-solving skills, and mental fortitude.</li>
+          <li><strong>Community:</strong> BJJ schools foster a strong sense of camaraderie and support, creating a welcoming environment for people of all ages and backgrounds.</li>
+          <li><strong>Confidence:</strong> Mastering BJJ techniques and progressing through the belt ranks boosts self-confidence and provides a sense of accomplishment.</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Join Golden Tiger Academy and Start Your BJJ Journey Today!</h2>
+        <p>If you’re interested in starting BJJ, there's no better place than Golden Tiger Academy. Our experienced instructors offer beginner classes that introduce you to the basics of BJJ in a supportive environment. Whether you're looking to compete, defend yourself, or simply get in shape, Golden Tiger Academy provides a comprehensive BJJ program for all skill levels. Visit our website at <a href="https://goldentigeracademy.com/">Golden Tiger Academy</a> to learn more and sign up for your first class. Join our community and see what you can achieve on the mats!</p>
+      </section>
     </main>
 
     <!-- Section - Ready To Join -->
