--- a/kung-fu.html
+++ b/kung-fu.html
@@ -176,7 +176,7 @@
 
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
-    <link rel="canonical" href="https://goldentigeracademy.com/class-kung-fu" />
+    <link rel="canonical" href="https://goldentigeracademy.com/kung-fu.html" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
