--- a/what-is-brazilian-jiu-jitsu-bjj.html
+++ b/what-is-brazilian-jiu-jitsu-bjj.html
@@ -185,6 +185,7 @@
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
     <link rel="stylesheet" href="./styles.min.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="What is Brazilian Jiu Jitsu (BJJ)? - a martial art emphasizing ground fighting, leverage, and technique. Learn about BJJ's principles, techniques like submissions and positions, and its benefits for self-defense and fitness." />
     <title>What is Brazilian Jiu-Jitsu (BJJ)? A Beginner's Guide</title>
@@ -204,28 +205,29 @@
         <h2>What is Brazilian Jiu-Jitsu (BJJ)?</h2>
         <p>Brazilian Jiu-Jitsu (BJJ) is a martial art and combat sport that focuses on grappling and ground fighting, emphasizing the use of technique and leverage over brute strength. Originating from Japan, Jiu-Jitsu was refined and transformed into its modern form by the Gracie family in Brazil, particularly by Helio Gracie. Helio adapted traditional Jiu-Jitsu techniques to accommodate his smaller stature, creating a system where a smaller, weaker person could effectively defend themselves against a larger, stronger opponent.</p>
 
-        <img src="./images/helio-gracie.png" alt="BJJ Grandmaster Helio Gracie" />
+        <img src="./images/helio-gracie.webp" class="blog-image" alt="BJJ Grandmaster Helio Gracie" />
       </section>
 
       <section>
         <h2>What is BJJ Known For?</h2>
         <p>BJJ is renowned for its emphasis on ground fighting and submissions. Unlike many martial arts that focus on striking, BJJ teaches practitioners to control their opponents through holds, chokes, and joint locks. This focus on ground techniques is what sets BJJ apart and makes it incredibly effective in real-life self-defense situations and mixed martial arts (MMA) competitions. BJJ gained global recognition through the success of the Gracie family in the Ultimate Fighting Championship (UFC), where they demonstrated that a skilled BJJ practitioner could defeat much larger and stronger opponents using superior technique and strategy.</p>
-        <img src="./images/what-is-bjj-known-for.png" alt="Demtrious Johnson finishing an Armbar in the UFC" />
       </section>
 
       <section>
-        <h2>How Many Years Does It Take to Learn BJJ? Understanding the Belt System</h2>
+        <h2>How Many Years Does It Take to Learn BJJ?</h2>
         <p>Learning BJJ is a lifelong journey, and the time it takes to progress through the ranks can vary greatly depending on the individual. The belt system in BJJ starts with white belt and progresses through blue, purple, brown, and finally, black belt. On average, it takes around 10 years of consistent training to achieve a black belt, although this can vary. Each belt represents a significant milestone in a practitioner’s development, reflecting their growing mastery of techniques, understanding of the art, and personal growth.</p>
+        <img src="./images/bjj-belt-ranks.webp" class="blog-image" alt="bjj belt ranks" />
       </section>
 
       <section>
-        <h2>Gi vs. No-Gi: Understanding the Differences</h2>
+        <h2>Gi vs. No-Gi Brazilian Jiu-Jitsu (BJJ)</h2>
         <p>BJJ can be practiced in two different ways: with a gi (a traditional martial arts uniform) or without a gi (no-gi).</p>
         <ul>
           <li><strong>Gi BJJ:</strong> Involves wearing a gi, which allows for the use of grips on the clothing to control and submit opponents. The gi introduces a variety of techniques that rely on gripping the fabric, adding another layer of strategy to the game.</li>
           <li><strong>No-Gi BJJ:</strong> Practiced in athletic wear such as rash guards and shorts. Without the gi, practitioners rely more on body control and speed, as there are no grips on clothing. This style is often faster-paced and more similar to the grappling seen in MMA.</li>
         </ul>
         <p>Both gi and no-gi BJJ offer unique challenges and benefits, and many practitioners choose to train in both to develop a well-rounded skill set.</p>
+        <img src="./images/bjj-gi-vs-no-gi.webp.png" class="blog-image" alt="BJJ Gi vs No Gi uniforms" />
       </section>
 
       <section>
@@ -237,11 +239,7 @@
           <li><strong>Community:</strong> BJJ schools foster a strong sense of camaraderie and support, creating a welcoming environment for people of all ages and backgrounds.</li>
           <li><strong>Confidence:</strong> Mastering BJJ techniques and progressing through the belt ranks boosts self-confidence and provides a sense of accomplishment.</li>
         </ul>
-      </section>
-
-      <section>
-        <h2>Join Golden Tiger Academy and Start Your BJJ Journey Today!</h2>
-        <p>If you’re interested in starting BJJ, there's no better place than Golden Tiger Academy. Our experienced instructors offer beginner classes that introduce you to the basics of BJJ in a supportive environment. Whether you're looking to compete, defend yourself, or simply get in shape, Golden Tiger Academy provides a comprehensive BJJ program for all skill levels. Visit our website at <a href="https://goldentigeracademy.com/">Golden Tiger Academy</a> to learn more and sign up for your first class. Join our community and see what you can achieve on the mats!</p>
+        <img src="./images/bjj-mackenzie-dern.webp" class="blog-image" alt="mackenzie dern bjj" />
       </section>
     </main>
 
