Adding missing <h1> tag

--- a/what-is-brazilian-jiu-jitsu-bjj.html
+++ b/what-is-brazilian-jiu-jitsu-bjj.html
@@ -18,7 +18,7 @@
 
     <!-- Start VWO Async SmartCode -->
     <link rel="preconnect" href="https://dev.visualwebsiteoptimizer.com" />
-    <script type="text/javascript" id="vwoCode">
+    <script id="vwoCode">
       window._vwo_code ||
         (function () {
           var account_id = 850325,
@@ -202,7 +202,7 @@
 
     <main>
       <section>
-        <h2>What is Brazilian Jiu-Jitsu (BJJ)?</h2>
+        <h1>What is Brazilian Jiu-Jitsu (BJJ)?</h1>
         <p>Brazilian Jiu-Jitsu (BJJ) is a martial art and combat sport that focuses on grappling and ground fighting, emphasizing the use of technique and leverage over brute strength. Originating from Japan, Jiu-Jitsu was refined and transformed into its modern form by the Gracie family in Brazil, particularly by Helio Gracie. Helio adapted traditional Jiu-Jitsu techniques to accommodate his smaller stature, creating a system where a smaller, weaker person could effectively defend themselves against a larger, stronger opponent.</p>
 
         <img src="./images/helio-gracie.webp" class="blog-image" alt="BJJ Grandmaster Helio Gracie" />
