--- a/contact-us.html
+++ b/contact-us.html
@@ -302,7 +302,7 @@
       </div>
     </footer>
 
-    <script src="./contact-us.min.js"></script>
+    <script src="./contact-us.js"></script>
     <script src="https://web3forms.com/client/script.js" async defer></script>
   </body>
 </html>
