--- a/gallery.html
+++ b/gallery.html
@@ -286,7 +286,7 @@
       </div>
     </footer>
 
-    <script src="./mobile-nav.min.js"></script>
+    <script src="./mobile-nav.js"></script>
     <script src="./lightbox-plus-jquery.js"></script>
     <script src="https://web3forms.com/client/script.js" async defer></script>
   </body>
