--- a/index.html
+++ b/index.html
@@ -436,10 +436,7 @@
         <button class="time-table-button" id="bjj">BJJ</button>
         <button class="time-table-button" id="muay-thai">Muay Thai</button>
         <button class="time-table-button" id="kickboxing">Kickboxing</button>
-
         <button class="time-table-button" id="karate">Kenpo Karate</button>
-        <button class="time-table-button" id="wing-tsun">Wing Tsun</button>
-        <button class="time-table-button" id="blood-and-bones">Blood & Bones</button>
         <button class="time-table-button" id="open-mat">Open Mat</button>
       </div>
       <table class="timetable-section-container-inner">
@@ -455,30 +452,34 @@
 
         <tr>
           <!-- Monday Row 1 -->
-          <td class="class bjj" data-cell="class">
-            BJJ NoGi
-            <div class="time" data-cell="time">6:30pm - 7:30pm</div>
+          <td class="class muay-thai" data-cell="class">
+            Muay Thai <br />
+            (age 7-14)
+            <div class="time" data-cell="time">6:00pm - 6:45pm</div>
           </td>
           <!-- Tuesday Row 1 -->
           <td class="class bjj" data-cell="class">
-            BJJ (age 5-12)
+            BJJ Gi <br />
+            (age 5-12)
             <div class="time" data-cell="time">6:00pm - 6:45pm</div>
           </td>
           <!-- Wednesday Row 1 -->
           <td class="class kickboxing" data-cell="class">
-            Kickboxing (age 5-12)
+            Kickboxing <br />(age 5-12)
             <div class="time" data-cell="time">5:00pm - 5:45pm</div>
           </td>
           <!-- Thursday Row 1 -->
           <td class="class korean-kickboxing" data-cell="class">
-            Korean Kickboxing (age 5-12)
+            Korean Kickboxing <br />
+            (age 5-12)
             <div class="time" data-cell="time">6:00pm - 6:45pm</div>
           </td>
           <!-- Friday Row 1 -->
           <td class="class closed" data-cell="class">Closed</td>
           <!-- Saturday Row 1 -->
           <td class="class karate" data-cell="class">
-            Kenpo Karate (age 5-12)
+            Kenpo Karate <br />
+            (age 5-12)
             <div class="time" data-cell="time">9:30am - 10:15am</div>
           </td>
           <!-- Sunday Row 1 -->
@@ -486,61 +487,71 @@
         </tr>
         <tr>
           <!-- Monday Row 2 -->
-          <td class="class muay-thai" data-cell="class">
-            Muay Thai
-            <div class="time" data-cell="time">7:30pm - 8:30pm</div>
+
+          <td class="class bjj" data-cell="class">
+            BJJ NoGi <br />
+            (age 18+)
+            <div class="time" data-cell="time">7:00pm - 8:00pm</div>
           </td>
           <!-- Tuesday Row 2 -->
           <td class="class bjj" data-cell="class">
-            BJJ Gi (age 13-17)
+            BJJ Gi <br />
+            (age 13-17)
             <div class="time" data-cell="time">7:00pm - 8:00pm</div>
           </td>
           <!-- Wednesday Row 2 -->
           <td class="class kickboxing" data-cell="class">
-            Kickboxing (age 13-17)
+            Kickboxing <br />(age 13-17)
             <div class="time" data-cell="time">6:00pm - 7:00pm</div>
           </td>
           <!-- Thursday Row 2 -->
           <td class="class bjj" data-cell="class">
-            BJJ Gi
+            BJJ Gi <br />
+            (age 18+)
             <div class="time" data-cell="time">7:00pm - 8:00pm</div>
           </td>
           <!-- Friday Row 2 -->
           <td class="class closed" data-cell="class">Closed</td>
           <!-- Saturday Row 2 -->
           <td class="class karate" data-cell="class">
-            Kenpo Karate (age 13-17)
+            Kenpo Karate <br />
+            (age 13-17)
             <div class="time" data-cell="time">10:30am - 11:30am</div>
           </td>
           <td class="class closed" data-cell="class">Closed</td>
         </tr>
         <tr>
           <!-- Monday Row 3 -->
-
-          <td class="class blood-and-bones" data-cell="class">
-            Blood & Bones
-            <div class="time" data-cell="time">7:30pm - 8:30pm</div>
+          <td class="class muay-thai" data-cell="class">
+            Muay Thai <br />
+            (age 15+)
+            <div class="time" data-cell="time">8:00pm - 9:00pm</div>
           </td>
+
           <!-- Tuesday Row 3 -->
           <td class="class bjj" data-cell="class">
-            BJJ NoGi
+            BJJ NoGi <br />
+            (age 18+)
             <div class="time" data-cell="time">8:00pm - 9:00pm</div>
           </td>
           <!-- Wednesday Row 3 -->
           <td class="class karate" data-cell="class">
-            Kenpo Karate (age 13-17)
+            Kenpo Karate <br />
+            (age 13-17)
             <div class="time" data-cell="time">7:00pm - 8:00pm</div>
           </td>
           <!-- Thursday Row 3 -->
           <td class="class muay-thai" data-cell="class">
-            Muay Thai
+            Muay Thai <br />
+            (age 15+)
             <div class="time" data-cell="time">8:00pm - 9:00pm</div>
           </td>
           <!--Friday Row 3 -->
           <td class="class closed" data-cell="class">Closed</td>
           <!-- Saturday Row 3 -->
           <td class="class karate" data-cell="class">
-            Kenpo Karate
+            Kenpo Karate <br />
+            (age 18+)
             <div class="time" data-cell="time">11:30am - 1:00pm</div>
           </td>
           <!--Sunday Row 3 -->
@@ -548,15 +559,15 @@
         </tr>
         <tr>
           <!-- Monday Row 4 -->
-          <td class="class wing-tsun" data-cell="class">
-            Wing Tsun Kung Fu
-            <div class="time" data-cell="time">8:30pm - 10:00pm</div>
+          <td class="class" data-cell="class">
+            <div class="time" data-cell="time"></div>
           </td>
           <!-- Tuesday Row 4 -->
           <td></td>
           <!-- Wednesday Row 4 -->
           <td class="class karate" data-cell="class">
-            Kenpo Karate
+            Kenpo Karate <br />
+            (age 18+)
             <div class="time" data-cell="time">8:00pm - 9:00pm</div>
           </td>
           <!--Thursday Row 4 -->
@@ -580,28 +591,24 @@
         </tr>
         <tr>
           <td class="class" data-cell="class">
+            Muay Thai (age 7-14)
+            <span class="time" data-cell="time">6:00pm - 6:45pm</span>
+          </td>
+        </tr>
+        <tr>
+          <td class="class" data-cell="class">
             BJJ NoGi
-            <span class="time" data-cell="time">6:30pm - 7:30pm</span>
+            <span class="time" data-cell="time">7:00pm - 8:00pm</span>
           </td>
         </tr>
         <tr>
           <td class="class" data-cell="class">
             Muay Thai
-            <span class="time" data-cell="time">7:30pm - 8:30pm</span>
+            <span class="time" data-cell="time">8:00pm - 9:00pm</span>
           </td>
         </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            Blood & Bones
-            <span class="time" data-cell="time">7:30pm - 8:30pm</span>
-          </td>
-        </tr>
-        <tr>
-          <td class="class" data-cell="class">
-            Wing Tsun
-            <span class="time" data-cell="time">8:30pm - 10:00pm</span>
-          </td>
-        </tr>
+        <tr></tr>
+        <tr></tr>
         <!-- Tuesday -->
         <tr>
           <th>Tuesday</th>
@@ -773,7 +780,7 @@
       </div>
     </footer>
 
-    <script src="./app.min.js"></script>
-    <script src="./animate.min.js"></script>
+    <script src="./app.js"></script>
+    <script src="./animate.js"></script>
   </body>
 </html>
