--- a/karate.html
+++ b/karate.html
@@ -373,7 +373,7 @@
       </div>
     </footer>
 
-    <script src="./mobile-nav.min.js"></script>
-    <script src="./animate.min.js"></script>
+    <script src="./mobile-nav.js"></script>
+    <script src="./animate.js"></script>
   </body>
 </html>
