--- a/kenpo-karate-sign-up.html
+++ b/kenpo-karate-sign-up.html
@@ -302,6 +302,6 @@
       </div>
     </div>
 
-    <script src="./animate.min.js"></script>
+    <script src="./animate.js"></script>
   </body>
 </html>
