--- a/what-is-brazilian-jiu-jitsu-bjj.html
+++ b/what-is-brazilian-jiu-jitsu-bjj.html
@@ -294,6 +294,6 @@
         </div>
       </div>
     </footer>
-    <script src="./animate.min.js"></script>
+    <script src="./animate.js"></script>
   </body>
 </html>
