--- a/muay-thai.html
+++ b/muay-thai.html
@@ -374,7 +374,7 @@
       </div>
     </footer>
 
-    <script src="./mobile-nav.min.js"></script>
-    <script src="./animate.min.js"></script>
+    <script src="./mobile-nav.js"></script>
+    <script src="./animate.js"></script>
   </body>
 </html>
