Removing Wing Tsun & Blood and Bones

--- a/index.html
+++ b/index.html
@@ -316,13 +316,6 @@
           </div>
         </div>
 
-        <div class="card card-wing-tsun">
-          <div class="card-content">
-            <h3 class="card-header">Wing Tsun Kung Fu</h3>
-            <p class="card-subheader">Wing Tsun Kung Fu is a martial art that emphasizes efficiency and directness in self-defense. Developed by Grandmaster Leung Ting, it focuses on practical techniques and scientific principles.</p>
-            <a href="./kung-fu.html" class="card-btn class-kung-fu">Learn More <span class="sr-only">about Kung Fu</span></a>
-          </div>
-        </div>
         <div class="card card-korean-kickboxing">
           <div class="card-content">
             <h3 class="card-header">Korean Kickboxing</h3>
@@ -576,7 +569,8 @@
           <td class="class closed" data-cell="class">Closed</td>
           <!-- Saturday Row 4 -->
           <td class="class open-mat" data-cell="class">
-            Open Mat (16+)
+            Open Mat <br />
+            (age 16+)
             <div class="time" data-cell="time">1:00pm - 2:00pm</div>
           </td>
           <!-- Sunday Row 4 -->
