--- a/kung-fu.html
+++ b/kung-fu.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9222579198944867" crossorigin="anonymous"></script>
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
