HIding "Coming Soon" badges and re-ordering class cards on homepage

--- a/karate.html
+++ b/karate.html
@@ -240,7 +240,7 @@
 
         <div class="class-text">
           <div class="class-format">
-            <aside class="arrow">Limited spaces available!</aside>
+            <!-- <aside class="arrow">Limited spaces available!</aside> -->
             <h2>Kids Classes</h2>
             <p>Introduce your child to Kenpo Karate with our exciting classes designed for kids aged 5-12. Our sessions are more than just workouts; they're filled with games, laughter, and valuable lessons, providing a holistic approach to martial arts training in a supportive environment. Enroll now for September 2024. Limited spots for kids' Kenpo Karate. Contact us today!</p>
           </div>
