--- a/index.html
+++ b/index.html
@@ -284,28 +284,29 @@
     <section class="our-classes-section-container-outer" id="our-classes">
       <h2>Our Classes</h2>
       <div class="our-classes-section-container-inner">
-        <div class="card card-kenpo-karate">
-          <div class="ribbon">Kids' Karate: Enroll Now, Limited Spots!</div>
-          <div class="card-content">
-            <h3 class="card-header">Kenpo Karate</h3>
-            <p class="card-subheader">Kenpo Karate blends punches, kicks, and blocks for self-defense. Discipline, respect, and physical conditioning are core aspects, fostering personal development and martial skill.</p>
-            <a href="./karate.html" class="card-btn class-karate">Learn More <span class="sr-only">about Kenpo Karate</span></a>
-          </div>
-        </div>
-        <div class="card card-muay-thai">
-          <div class="ribbon">Kids / Teens Class Coming September!</div>
-          <div class="card-content">
-            <h3 class="card-header">Muay Thai</h3>
-            <p class="card-subheader">Muay Thai, the 'Art of Eight Limbs,' integrates punches, kicks, elbows, and knee strikes. Known for its power and effectiveness, it builds strength and striking precision. Kids / Teens Class coming soon in September 2024. Contact us to enroll your child and secure a spot.</p>
-            <a href="./muay-thai.html" class="card-btn class-muay-thai">Learn More <span class="sr-only">about Muay Thai</span></a>
-          </div>
-        </div>
-
         <div class="card card-bjj">
           <div class="card-content">
             <h3 class="card-header">Brazilian Jiu-Jitsu</h3>
             <p class="card-subheader">BJJ focuses on ground grappling and submissions. Develop self-defense skills, fitness, and mental resilience through technical groundwork. Suitable for all skill levels.</p>
             <a href="./bjj.html" class="card-btn class-bjj">Learn More <span class="sr-only">about Brazilian Jiu-Jitsu</span></a>
+          </div>
+        </div>
+
+        <div class="card card-muay-thai">
+          <!-- <div class="ribbon">Kids / Teens Class Coming September!</div> -->
+          <div class="card-content">
+            <h3 class="card-header">Muay Thai</h3>
+            <p class="card-subheader">Muay Thai, the 'Art of Eight Limbs,' integrates punches, kicks, elbows, and knee strikes. Known for its power and effectiveness, it builds strength and striking precision.</p>
+            <a href="./muay-thai.html" class="card-btn class-muay-thai">Learn More <span class="sr-only">about Muay Thai</span></a>
+          </div>
+        </div>
+
+        <div class="card card-kenpo-karate">
+          <!-- <div class="ribbon">Kids' Karate: Enroll Now, Limited Spots!</div> -->
+          <div class="card-content">
+            <h3 class="card-header">Kenpo Karate</h3>
+            <p class="card-subheader">Kenpo Karate blends punches, kicks, and blocks for self-defense. Discipline, respect, and physical conditioning are core aspects, fostering personal development and martial skill.</p>
+            <a href="./karate.html" class="card-btn class-karate">Learn More <span class="sr-only">about Kenpo Karate</span></a>
           </div>
         </div>
 
