Adding Korean Kickboxing Filter to Timetable

--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@
         <button class="time-table-button" id="bjj">BJJ</button>
         <button class="time-table-button" id="muay-thai">Muay Thai</button>
         <button class="time-table-button" id="kickboxing">Kickboxing</button>
+        <button class="time-table-button" id="korean-kickboxing">Korean Kickboxing</button>
         <button class="time-table-button" id="karate">Kenpo Karate</button>
         <button class="time-table-button" id="open-mat">Open Mat</button>
       </div>
