Adding 'Muay Thai Dublin' SEO page

--- a/bjj-belts-explained.html
+++ b/bjj-belts-explained.html
@@ -42,7 +42,7 @@
     <meta name="description" content="Understand the BJJ belt system, including the significance of each belt color, the role of stripes, and the process of belt promotions." />
     <title>BJJ Belts Explained: Understanding Colors and Ranks</title>
   </head>
-  <body id="what-is-bjj">
+  <body id="blog-page">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K6FXLSWW" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
