--- a/muay-thai-dublin.html
+++ b/muay-thai-dublin.html
@@ -189,8 +189,8 @@
     <link rel="stylesheet" href="./styles.min.css" />
     <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="What is Brazilian Jiu Jitsu (BJJ)? - a martial art emphasizing ground fighting, leverage, and technique. Learn about BJJ's principles, techniques like submissions and positions, and its benefits for self-defense and fitness." />
-    <title>What is Brazilian Jiu-Jitsu (BJJ)? A Beginner's Guide</title>
+    <meta name="description" content="Looking for Muay Thai near Dublin? Golden Tiger Academy in Dunboyne offers top-tier Muay Thai training for all levels. Join us for expert instruction and a welcoming community." />
+    <title>Muay Thai Near Dublin: Start Training in Dunboyne</title>
   </head>
   <body id="blog-page">
     <!-- Google Tag Manager (noscript) -->
@@ -204,44 +204,44 @@
 
     <main>
       <section>
-        <h1>What is Brazilian Jiu-Jitsu (BJJ)?</h1>
-        <p>Brazilian Jiu-Jitsu (BJJ) is a martial art and combat sport that focuses on grappling and ground fighting, emphasizing the use of technique and leverage over brute strength. Originating from Japan, Jiu-Jitsu was refined and transformed into its modern form by the Gracie family in Brazil, particularly by Helio Gracie. Helio adapted traditional Jiu-Jitsu techniques to accommodate his smaller stature, creating a system where a smaller, weaker person could effectively defend themselves against a larger, stronger opponent.</p>
+        <h1>Muay Thai Near Dublin: Start Training in Dunboyne</h1>
+        <p>Muay Thai, also known as "The Art of Eight Limbs," is a traditional martial art from Thailand that uses punches, kicks, elbows, and knees in combat. It's a full-body workout, combining power, precision, and endurance, making it one of the most effective martial arts for both fitness and self-defense.</p>
 
-        <img src="./images/helio-gracie.webp" class="blog-image" alt="BJJ Grandmaster Helio Gracie" />
+        <img src="./images/our-class-muay-thai.webp" class="blog-image" alt="Two Muay Thai Stundets sparring" />
       </section>
 
       <section>
-        <h2>What is BJJ Known For?</h2>
-        <p>BJJ is renowned for its emphasis on ground fighting and submissions. Unlike many martial arts that focus on striking, BJJ teaches practitioners to control their opponents through holds, chokes, and joint locks. This focus on ground techniques is what sets BJJ apart and makes it incredibly effective in real-life self-defense situations and mixed martial arts (MMA) competitions. BJJ gained global recognition through the success of the Gracie family in the Ultimate Fighting Championship (UFC), where they demonstrated that a skilled BJJ practitioner could defeat much larger and stronger opponents using superior technique and strategy.</p>
-      </section>
-
-      <section>
-        <h2>How Many Years Does It Take to Learn BJJ?</h2>
-        <p>Learning BJJ is a lifelong journey, and the time it takes to progress through the ranks can vary greatly depending on the individual. The belt system in BJJ starts with white belt and progresses through blue, purple, brown, and finally, black belt. On average, it takes around 10 years of consistent training to achieve a black belt, although this can vary. Each belt represents a significant milestone in a practitioner’s development, reflecting their growing mastery of techniques, understanding of the art, and personal growth.</p>
-        <img src="./images/bjj-belt-ranks.webp" class="blog-image" alt="bjj belt ranks" />
-      </section>
-
-      <section>
-        <h2>Gi vs. No-Gi Brazilian Jiu-Jitsu (BJJ)</h2>
-        <p>BJJ can be practiced in two different ways: with a gi (a traditional martial arts uniform) or without a gi (no-gi).</p>
+        <h2>Why Train Muay Thai at Golden Tiger Academy?</h2>
+        <p>Golden Tiger Academy, located just outside Dublin in Dunboyne, Co. Meath, offers an authentic Muay Thai experience. Whether you're a beginner or an experienced fighter, our club provides a supportive environment to improve your technique, strength, and mental focus. Our head instructors bring years of experience, making us a premier choice for Muay Thai training near Dublin.</p>
         <ul>
-          <li><strong>Gi BJJ:</strong> Involves wearing a gi, which allows for the use of grips on the clothing to control and submit opponents. The gi introduces a variety of techniques that rely on gripping the fabric, adding another layer of strategy to the game.</li>
-          <li><strong>No-Gi BJJ:</strong> Practiced in athletic wear such as rash guards and shorts. Without the gi, practitioners rely more on body control and speed, as there are no grips on clothing. This style is often faster-paced and more similar to the grappling seen in MMA.</li>
+          <li>- Experienced trainers</li>
+          <li>- Welcoming community</li>
+          <li>- Modern facilities</li>
+          <li>- Class schedule options for all skill levels</li>
         </ul>
-        <p>Both gi and no-gi BJJ offer unique challenges and benefits, and many practitioners choose to train in both to develop a well-rounded skill set.</p>
-        <img src="./images/bjj-gi-vs-no-gi.webp.png" class="blog-image" alt="BJJ Gi vs No Gi uniforms" />
       </section>
 
       <section>
-        <h2>The Benefits of Practicing BJJ</h2>
-        <p>Beyond its effectiveness in self-defense and competitive fighting, BJJ offers numerous benefits:</p>
+        <h2>Benefits of Training Muay Thai</h2>
+        <p>Muay Thai offers a range of physical and mental benefits:</p>
         <ul>
-          <li><strong>Fitness:</strong> BJJ is a full-body workout that improves strength, flexibility, endurance, and cardiovascular health.</li>
-          <li><strong>Mental Toughness:</strong> Training BJJ builds resilience, problem-solving skills, and mental fortitude.</li>
-          <li><strong>Community:</strong> BJJ schools foster a strong sense of camaraderie and support, creating a welcoming environment for people of all ages and backgrounds.</li>
-          <li><strong>Confidence:</strong> Mastering BJJ techniques and progressing through the belt ranks boosts self-confidence and provides a sense of accomplishment.</li>
+          <li><strong>Full-Body Workout:</strong> It combines cardio, strength, and flexibility training.</li>
+          <li><strong>Self-Defense Skills:</strong> Practical techniques for real-life situations.</li>
+          <li><strong>Increased Confidence:</strong> Overcoming challenges in training builds mental resilience.</li>
+          <li><strong>Weight Loss and Fitness:</strong> Burn calories while building lean muscle.</li>
         </ul>
-        <img src="./images/bjj-mackenzie-dern.webp" class="blog-image" alt="mackenzie dern bjj" />
+        <img src="./images/gallery-4.webp" class="blog-image" alt="Muay Thai empty academy lit up with colourful lights." />
+      </section>
+
+      <section>
+        <h2>Muay Thai for All Levels</h2>
+        <p>At Golden Tiger Academy, we cater to all skill levels. Whether you’re just starting out or looking to compete, we have classes tailored to your needs. Our beginners’ classes focus on mastering the fundamentals, while advanced sessions dive into complex techniques and fight strategies.</p>
+        <img src="./images/page-muay-thai-02.webp" class="blog-image" alt="Muay thai student hitting the heavy bag" />
+      </section>
+
+      <section>
+        <h2>How to Get Started</h2>
+        <p>Ready to start your Muay Thai journey? Visit Golden Tiger Academy in Dunboyne, Co. Meath, and see firsthand why we’re the top choice for Muay Thai near Dublin. Sign up for a trial class today to experience our facilities and expert coaching.</p>
       </section>
     </main>
 
