--- a/blog.html
+++ b/blog.html
@@ -78,6 +78,14 @@
       <h1>Golden Tiger Academy Blog</h1>
       <div class="blog-container-outer">
         <div class="blog-container-inner">
+          <a href="./mma.html">
+            <div class="blog-card">
+              <img src="./images/gallery-5.webp" alt="" />
+              <div class="blog-card-eyebrow">Mixed Martial Arts (MMA)</div>
+              <h2 class="blog-card-title">Why Train Like an MMA Fighter?</h2>
+              <div class="blog-card-text">Training like an MMA fighter doesn’t just prepare you for competition; it transforms your overall fitness, conditioning, and self-defense skills.</div>
+            </div>
+          </a>
           <a href="./what-is-brazilian-jiu-jitsu-bjj.html">
             <div class="blog-card">
               <img src="./images/helio-gracie.webp" alt="" />
