Adding GTA Store to the website

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffa126" />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="./styles.min.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Explore martial arts excellence at Golden Tiger Academy in Dunboyne. Classes for all ages and levels, from beginners to advanced. Expert instructors guide kids, fitness enthusiasts, and self-defense seekers. Unleash your potential in a supportive environment. Elevate your fitness journey at Golden Tiger Academy Dunboyne." />
     <title>Martial arts classes | Muay Thai | Brazilian Jiu-Jitsu (BJJ) | Karate | Kickboxing</title>
@@ -209,12 +209,12 @@
 
           <div class="mobile-nav-wrapper">
             <ul id="primary-navigation">
-              <li><a href="./" class="nav-link">Home</a></li>
               <li><a href="./#about-us" class="nav-link">About us</a></li>
               <li><a href="./#our-classes" class="nav-link">Our Classes</a></li>
               <li><a href="./#faqs" class="nav-link">FAQs</a></li>
               <li><a href="./#timetable" class="nav-link">Timetable</a></li>
               <li><a href="./gallery" class="nav-link">Gallery</a></li>
+              <li><a href="./#shop" class="nav-link">Shop</a></li>
               <li><a href="./contact-us" class="nav-link">Contact Us</a></li>
             </ul>
           </div>
@@ -359,68 +359,98 @@
       </div>
       <div class="shape-divider-bottom">
         <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-1"></path>
+          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-2"></path>
         </svg>
       </div>
     </section>
 
-    <!-- FAQ Section -->
-    <section class="faq-section-container-outer" id="faqs">
-      <h2>FAQ's</h2>
-      <div class="faq-section-container-inner">
-        <ul class="accordion">
-          <li class="faq">
-            <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
-              <span class="question-title">Do I need any prior experience to join your martial arts classes?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
-            </button>
-            <p class="faq-answer" id="answer1" aria-hidden="true"><span> Whether you're a complete beginner or have some experience in martial arts, our classes are designed to accommodate individuals of all backgrounds. Our instructors will tailor their guidance to meet your specific needs, ensuring that you receive the support necessary to improve. </span></p>
-          </li>
+    <!-- Shop Section -->
+    <section class="shop-section-container-outer" id="shop">
+      <h2>GTA Store</h2>
+      <div class="testimonials-section-container-inner">
+        <div class="flip-card-container">
+          <!-- Card 1 -->
+          <a href="https://www.premiercustoms.ie/collections/golden-tiger-academy" target="_blank">
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="./images/shop-card01-front.webp" alt="GTA T-Shirt front" />
+                </div>
+                <div class="flip-card-back">
+                  <img src="./images/shop-card01-back.webp" alt="GTA T-Shirt back" />
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-name">GTA T-Shirt</div>
+                <div class="product-price">FROM €15</div>
+              </div>
+            </div>
+          </a>
 
-          <li class="faq">
-            <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
-              <span class="question-title">Do I need to be in shape before starting a martial art?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
-            </button>
-            <p class="faq-answer" id="answer2" aria-hidden="true"><span>No, martial arts is for people of all fitness levels. Our classes are designed to accommodate beginners and gradually build strength, flexibility, and endurance over time.</span></p>
-          </li>
-          <li class="faq">
-            <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
-              <span class="question-title">What's the youngest age kids can start martial arts?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
-            </button>
-            <p class="faq-answer" id="answer3" aria-hidden="true"><span>Kids can start martial arts at Golden Tiger Academy from the age of 5. We offer kids classes in Brazilian Jiu-jitsu, Kickboxing, Korean Kickboxing, and Kenpo Karate tailored to younger students, providing a fun, safe and supportive environment for learning essential skills like discipline, respect, and self-confidence. We also offer classes for teens ages 13 - 17. </span></p>
-          </li>
+          <!-- Card 2 -->
+          <a href="https://www.premiercustoms.ie/collections/golden-tiger-academy" target="_blank">
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="./images/shop-card02-front.webp" alt="GTA Sweatshirt  front" />
+                </div>
+                <div class="flip-card-back">
+                  <img src="./images/shop-card02-back.webp" alt="GTA Sweatshirt back" />
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-name">GTA Sweatshirt</div>
+                <div class="product-price">FROM €28</div>
+              </div>
+            </div>
+          </a>
 
-          <li class="faq">
-            <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
-              <span class="question-title">What should I wear and bring to my first martial arts class?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
-            </button>
-            <p class="faq-answer" id="answer4" aria-hidden="true"><span>For your first class, just wear comfortable gym clothes. Avoid anything with zippers or metal, and take off any jewellery if you can. Make sure your fingernails and toenails are trimmed too. And don't forget to bring a water bottle to stay hydrated!</span></p>
-          </li>
+          <!-- Card 3 -->
+          <a href="https://www.premiercustoms.ie/collections/golden-tiger-academy" target="_blank">
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="./images/shop-card03-front.webp" alt="GTA Hoodie  front" />
+                </div>
+                <div class="flip-card-back">
+                  <img src="/images/shop-card03-back.webp" alt="GTA Hoodie back" />
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-name">GTA Hoodie</div>
+                <div class="product-price">FROM €25</div>
+              </div>
+            </div>
+          </a>
 
-          <li class="faq">
-            <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
-              <span class="question-title">Do you offer private lessons / group lessons?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
-            </button>
-            <p class="faq-answer" id="answer5" aria-hidden="true"><span>Yes, we provide one-to-one private lessons. Additionally, we offer small group sessions that can be customized for specific groups, such as women's only sessions, ensuring a comfortable and supportive environment for all participants.</span></p>
-          </li>
-          <li class="faq">
-            <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
-              <span class="question-title">Are your instructors certified and experienced?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
-            </button>
-            <p class="faq-answer" id="answer6" aria-hidden="true"><span>All our instructors hold first aid training certification and are Garda-vetted. They bring years of valuable experience to ensure safe and effective instruction for students of all levels.</span></p>
-          </li>
-        </ul>
+          <!-- Card 4 -->
+          <a href="https://www.premiercustoms.ie/collections/golden-tiger-academy" target="_blank">
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="./images/shop-card04-front.webp" alt="GTA 1/4 Zip front" />
+                </div>
+                <div class="flip-card-back">
+                  <img src="/images/shop-card04-back.webp" alt="GTA 1/4 Zip" />
+                </div>
+              </div>
+              <div class="product-info">
+                <div class="product-name">GTA 1/4 Zip</div>
+                <div class="product-price">FROM €25</div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="cta-wrap draw-border">
+        <a href="https://www.premiercustoms.ie/collections/golden-tiger-academy" target="_blank" class="cta cta-1-contact-us"> Shop Now</a>
+      </div>
+
+      <div class="shape-divider-bottom">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="theme-color-3"></path>
+        </svg>
       </div>
     </section>
 
@@ -724,6 +754,66 @@
           <td class="class" data-cell="class">Closed</td>
         </tr>
       </table>
+    </section>
+
+    <!-- FAQ Section -->
+    <section class="faq-section-container-outer" id="faqs">
+      <h2>FAQ's</h2>
+      <div class="faq-section-container-inner">
+        <ul class="accordion">
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer1">
+              <span class="question-title">Do I need any prior experience to join your martial arts classes?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer1" aria-hidden="true"><span> Whether you're a complete beginner or have some experience in martial arts, our classes are designed to accommodate individuals of all backgrounds. Our instructors will tailor their guidance to meet your specific needs, ensuring that you receive the support necessary to improve. </span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
+              <span class="question-title">Do I need to be in shape before starting a martial art?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer2" aria-hidden="true"><span>No, martial arts is for people of all fitness levels. Our classes are designed to accommodate beginners and gradually build strength, flexibility, and endurance over time.</span></p>
+          </li>
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
+              <span class="question-title">What's the youngest age kids can start martial arts?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer3" aria-hidden="true"><span>Kids can start martial arts at Golden Tiger Academy from the age of 5. We offer kids classes in Brazilian Jiu-jitsu, Kickboxing, Korean Kickboxing, and Kenpo Karate tailored to younger students, providing a fun, safe and supportive environment for learning essential skills like discipline, respect, and self-confidence. We also offer classes for teens ages 13 - 17. </span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
+              <span class="question-title">What should I wear and bring to my first martial arts class?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer4" aria-hidden="true"><span>For your first class, just wear comfortable gym clothes. Avoid anything with zippers or metal, and take off any jewellery if you can. Make sure your fingernails and toenails are trimmed too. And don't forget to bring a water bottle to stay hydrated!</span></p>
+          </li>
+
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
+              <span class="question-title">Do you offer private lessons / group lessons?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer5" aria-hidden="true"><span>Yes, we provide one-to-one private lessons. Additionally, we offer small group sessions that can be customized for specific groups, such as women's only sessions, ensuring a comfortable and supportive environment for all participants.</span></p>
+          </li>
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
+              <span class="question-title">Are your instructors certified and experienced?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer6" aria-hidden="true"><span>All our instructors hold first aid training certification and are Garda-vetted. They bring years of valuable experience to ensure safe and effective instruction for students of all levels.</span></p>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <!-- Section - Ready To Join -->
